--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,17 +29,8 @@ jobs:
 
     strategy:
       matrix:
-        keyboard: [ keyball39, keyball44, keyball61, keyball46, one47 ]
+        keyboard: [ keyball44 ]
         keymap: [ test, default, via ]
-        include:
-          - keyboard: keyball46
-            keymap:   test_Left
-          - keyboard: keyball46
-            keymap:   test_Both
-          - keyboard: keyball46
-            keymap:   via_Left
-          - keyboard: keyball46
-            keymap:   via_Both
 
     name: Build ${{ matrix.keyboard }} w/ ${{ matrix.keymap }}
 
@@ -75,19 +66,7 @@ jobs:
     steps:
 
     - uses: actions/download-artifact@v3
-      with: { name: keyball39-firmwares }
-
-    - uses: actions/download-artifact@v3
       with: { name: keyball44-firmwares }
-
-    - uses: actions/download-artifact@v3
-      with: { name: keyball61-firmwares }
-
-    - uses: actions/download-artifact@v3
-      with: { name: keyball46-firmwares }
-
-    - uses: actions/download-artifact@v3
-      with: { name: one47-firmwares }
 
     - name: List size of firmwares
       run: |
